--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ numpy==1.21.2
 scikit-learn==0.24.2
 python-dotenv==0.19.0
 requests==2.26.0
-pytest==6.2.5 
+pytest==6.2.5
+gunicorn==20.1.0
+flask-cors==3.0.10 
