--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-flask==2.3.3
-pandas==2.1.0
-numpy==1.24.3
-scikit-learn==1.3.0
-python-dotenv==1.0.0
-requests==2.31.0
-pytest==7.4.0
-gunicorn==21.2.0
-flask-cors==4.0.0 
+flask==2.0.1
+pandas==2.0.0
+numpy==1.24.0
+scikit-learn==1.2.0
+python-dotenv==0.19.0
+requests==2.26.0
+pytest==6.2.5
+gunicorn==20.1.0
+flask-cors==3.0.10
+joblib==1.3.0 
