--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-flask==2.0.1
+Flask==2.3.3
+Werkzeug==2.3.7
 pandas==2.0.0
 numpy==1.24.0
 scikit-learn==1.2.0
 python-dotenv==0.19.0
 requests==2.26.0
 pytest==6.2.5
-gunicorn==20.1.0
+gunicorn
 flask-cors==3.0.10
 joblib==1.3.0 
